src/snapshots/ebnf__grammar__test__simplify_grammar.snap
---
source: src/grammar.rs
expression: result
---
B_optional_0_group_0 ::= 'a' B_optional_0_group_0 | 'a';
S ::= 'jk' A | 'ab' S | 'ef' S_repeat0_0 | #"abc|ef|ab";
S_repeat0_0 ::= S_repeat0_0 B_optional_0_group_0 | B_optional_0_group_0;
A ::= A 'c' | #"cd|Ac";
