src/snapshots/ebnf__grammar__test__simplify_grammar10.snap
---
source: src/grammar.rs
expression: result
---
start_symbol: S
S ::= except!(#'c',10) | except!(#'a|B|qa') | except!(#'c');
A ::= #"a|B|qa";
