src/snapshots/ebnf__grammar__test__simplify_grammar2.snap
---
source: src/grammar.rs
expression: result
---
S ::= #"cdcda|cda|cdcdcdcda|cdcdcdcdcda|cdcdcdcdcdcda|cdcdcda";
