src/snapshots/ebnf__grammar__test__simplify_grammar3.snap
---
source: src/grammar.rs
expression: result
---
S ::= 'a' | 'a' 'a' 'a' | 'a' 'a' 'a' 'a' | 'a' 'a' | 'a' 'a' 'a' 'a' 'a';
