src/snapshots/ebnf__grammar__test__simplify_grammar5.snap
---
source: src/grammar.rs
expression: result
---
S ::= 'ab' S | 'jk' A | 'ab';
A ::= A 'c' | #"cd|Ac";
