src/snapshots/ebnf__grammar__test__unit_production_for_start_symbol.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= 'a'(ID: 0);
